<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.4</version>
    </parent>

    <groupId>de.swiftbyte.gmc</groupId>
    <artifactId>GmcDaemon</artifactId>
    <version>2.0.0-DEV</version>
    <name>GmcDaemon</name>
    <description>GameManagerCloud Daemon</description>
    <packaging>jar</packaging>
    <organization>
        <name>SwiftByte</name>
        <url>https://swiftbyte.de</url>
    </organization>
    <inceptionYear>2025</inceptionYear>

    <properties>
        <exec.mainClass>de.swiftbyte.gmc.Application</exec.mainClass>
        <java.version>21</java.version>
    </properties>

    <repositories>
        <repository>
            <id>swiftbyte</id>
            <url>https://repo.swiftbyte.de/releases</url>
        </repository>
        <repository>
            <id>vanquished</id>
            <url>https://repo.vanquished.gg/repository/maven-public/</url>
        </repository>
        <repository>
            <id>repo.jenkins-ci.org</id>
            <url>https://repo.jenkins-ci.org/releases/</url>
        </repository>
    </repositories>

    <dependencies>

        <!-- Spring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.shell</groupId>
            <artifactId>spring-shell-starter</artifactId>
            <version>3.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Jline -->
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline-terminal-ffm</artifactId>
            <version>3.30.4</version>
        </dependency>
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline-terminal-jansi</artifactId>
            <version>3.30.4</version>
        </dependency>

        <!-- SwiftByte -->
        <dependency>
            <groupId>de.swiftbyte.gmc</groupId>
            <artifactId>gmc-common</artifactId>
            <version>2.1.14</version>
        </dependency>
        <dependency>
            <groupId>xyz.astroark</groupId>
            <artifactId>rcon-core</artifactId>
            <version>1.0</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.19.2</version>
        </dependency>

        <!-- Reflections -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>

        <!-- Apache -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.18.0</version>
        </dependency>

        <!-- OKHTTP -->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>5.1.0</version>
        </dependency>

        <!-- Oshi -->
        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core</artifactId>
            <version>6.8.3</version>
        </dependency>

        <!-- ZeroTurnaround ZIP -->
        <dependency>
            <groupId>org.zeroturnaround</groupId>
            <artifactId>zt-zip</artifactId>
            <version>1.17</version>
            <type>jar</type>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.7.6</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <mainClass>${exec.mainClass}</mainClass>
                            <bundleJre>true</bundleJre>
                            <customizedJre>false</customizedJre>
                            <generateInstaller>false</generateInstaller>
                            <administratorRequired>true</administratorRequired>
                            <platform>windows</platform>
                            <jreMinVersion>21</jreMinVersion>
                            <vmArgs>--enable-native-access=ALL-UNNAMED</vmArgs>
                            <winConfig>
                                <headerType>console</headerType>
                                <icoFile>icon.ico</icoFile>
                            </winConfig>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>